--- a/housing-helper/package.json
+++ b/housing-helper/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.17",
+    "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -22,6 +23,8 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "stylelint-config-recommended": "^14.0.0",
+    "stylelint-config-tailwindcss": "^0.0.7",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.4"
   }
