--- a/housing-helper/package.json
+++ b/housing-helper/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.1.7",
+    "react-router-dom": "^6.22.1",
     "react-simple-maps": "^3.0.0",
     "tailwind": "^4.0.0"
   },
