--- a/housing-helper/package.json
+++ b/housing-helper/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/mapbox-gl": "^3.1.0",
     "autoprefixer": "^10.4.17",
+    "mapbox-gl": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.1.7",
