--- a/housing-helper/package.json
+++ b/housing-helper/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://main.d3nxsq0391nair.amplifyapp.com/#/",
   "name": "housing-helper",
   "private": true,
   "version": "0.0.0",
