--- a/housing-helper/package.json
+++ b/housing-helper/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/mapbox-gl": "^3.1.0",
     "autoprefixer": "^10.4.17",
+    "axios": "^1.6.7",
     "framer-motion": "^11.0.6",
     "mapbox-gl": "^3.1.2",
     "react": "^18.2.0",
